# Huffman-block-coding-song-

./: README.md  create_venv.bat
Algorithm/: pyproject.toml
Algorithm/src/: .gitignore
Algorithm/src/Runnable/: app.py
Report/: main.tex
